Kubernetes/Blobstorage/blobstorage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blobstorage-deployment
spec:
  selector:
    matchLabels:
      app: blobstorage
  template:
    metadata:
      labels:
        app: blobstorage
    spec:
      containers:
      - name: blobstorage
        image: minio/minio
        command: ["minio"]
        args: ["server", "/data", "--console-address", ":9001"]
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
          name: internal
        - containerPort: 9001
          name: ui
---
apiVersion: v1
kind: Service
metadata:
  name: blobstorage-service
spec:
  selector:
    app: blobstorage
  ports:
  - port: 9001
    targetPort: ui
    name: service-ui
  - port: 9000
    targetPort: internal
    name: service-internal
